xee-xpath-macros/src/snapshots/xee_xpath_macros__parse__tests__parse_signature_parse_error.snap
---
source: xee-xpath-macros/src/parse.rs
expression: "syn::parse_str::<XPathFnOptions>(r#\"\"wrong wrong\"\"#)"
---
Err(
    Error(
        "unexpected end of input, invalid XPath signature `wrong wrong`: unexpected token `wrong` at byte position 6..11",
    ),
)
