xee-xpath-macros/src/snapshots/xee_xpath_macros__parse__tests__parse_unknown_prefix_message.snap
---
source: xee-xpath-macros/src/parse.rs
expression: "syn::parse_str::<XPathFnOptions>(r#\"\"nope:foo() as xs:string\"\"#)"
---
Err(
    Error(
        "unexpected end of input, invalid XPath signature `nope:foo() as xs:string`: unknown namespace prefix `nope` at byte position 0..8",
    ),
)
