xee-xpath-macros/src/snapshots/xee_xpath_macros__parse__tests__parse_unknown_type_message.snap
---
source: xee-xpath-macros/src/parse.rs
expression: "syn::parse_str::<XPathFnOptions>(r#\"\"fn:foo() as xs:bogusType\"\"#)"
---
Err(
    Error(
        "unexpected end of input, invalid XPath signature `fn:foo() as xs:bogusType`: unknown type `xs:bogusType` at byte position 12..24",
    ),
)
